feat(quantization): Add modularization code

--- a/src/quantization/quantization.ipynb
+++ b/src/quantization/quantization.ipynb
@@ -158,6 +158,73 @@
     "# 양자화 적용\n",
     "!./build/bin/llama-quantize /quantized_tomato.gguf /quantized_tomatoQ4_K_M.gguf Q4_K_M"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8479bd61",
+   "metadata": {},
+   "source": [
+    "모델 결합 및 양자화 gguf 변환 코드 모듈화 (함수 그대로 써서 파일 이름만 파라미터로 넣으면 됨. 여러개 한번에 실행)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c4895d1",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/ggerganov/llama.cpp.git\n",
+    "\n",
+    "!pip install -r requirements.txt\n",
+    "\n",
+    "!mkdir -p build\n",
+    "!cmake -B build\n",
+    "!cmake --build build\n",
+    "\n",
+    "from peft import PeftModel\n",
+    "import torch\n",
+    "\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "def export_pruned_model_to_gguf(name: str):\n",
+    "    pruned_path = f\"/content/drive/MyDrive/smartfarm_pruning/1st/models/pruned/activation/{name}\"\n",
+    "    lora_path   = f\"/content/drive/MyDrive/smartfarm_pruning/1st/models/LoRA/activation/{name}\"\n",
+    "    out_hf_path = f\"/content/full_model_{name}\"\n",
+    "    out_gguf    = f\"/content/drive/MyDrive/{name}.gguf\"\n",
+    "\n",
+    "    # 프루닝 모델 로드\n",
+    "    base_model, tokenizer = load_pruned_model(\n",
+    "        pruned_path,\n",
+    "        device=\"cuda\",\n",
+    "        dtype=torch.float16\n",
+    "    )\n",
+    "\n",
+    "    # LoRA 병합\n",
+    "    full_model = PeftModel.from_pretrained(base_model, lora_path)\n",
+    "    full_model = full_model.merge_and_unload()\n",
+    "\n",
+    "    # 병합된 모델 저장\n",
+    "    full_model.save_pretrained(out_hf_path)\n",
+    "    tokenizer.save_pretrained(out_hf_path)\n",
+    "\n",
+    "    # GGUF 변환\n",
+    "    os.system(f\"\"\"\n",
+    "    cd /content/llama.cpp && \\\n",
+    "    python convert_hf_to_gguf.py {out_hf_path} \\\n",
+    "        --outfile {out_gguf} \\\n",
+    "        --outtype q8_0\n",
+    "    \"\"\")\n",
+    "\n",
+    "    print(f\"\\n양자화 완료: {out_gguf}\")\n",
+    "\n",
+    "export_pruned_model_to_gguf(\"pruned_activation_5\")"
+   ]
   }
  ],
  "metadata": {
